# hif-cicids2017

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md  clean_dataset.py  download.py
data/sample/: cicids2017_sample.csv
docs/: methodology.md  paper_audit.md
notebooks/: colab_run.ipynb
paper/: README.md
reproduce/: compare_with_original.py  run_comparison.py
scripts/: make_sample.py  package_dataset.py
src/hif/: __init__.py  baselines.py  config.py  ensemble.py  forest.py  lof.py  metrics.py  optimize.py  preprocessing.py
tests/: test_smoke.py
