[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hif-cicids2017"
version = "1.0.0"
description = "Hybrid Isolation Forest for network anomaly detection on CICIDS2017"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Diego Lopez Facundo" },
    { name = "Alejandra G. Silva-Trujillo" },
    { name = "Juan C. Cuevas-Tello" },
]
dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "imbalanced-learn>=0.12",
    "matplotlib>=3.8",
    "joblib>=1.4",
    "kagglehub>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
