[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hif-cicids2017"
version = "1.0.0"
description = "Hybrid Isolation Forest for network anomaly detection on CICIDS2017"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Diego Lopez Facundo" },
    { name = "Alejandra G. Silva-Trujillo" },
    { name = "Juan C. Cuevas-Tello" },
]
# Loose ranges so installing the package never fights an existing environment
# (for example Colab). For the exact pinned environment use requirements.txt.
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "imbalanced-learn>=0.11",
    "matplotlib>=3.6",
    "joblib>=1.2",
    "kagglehub>=0.3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
